# rs-musicdog

./: Cargo.toml  flake.nix  session-ses_346d.md
cloudmusic/: Cargo.toml
cloudmusic/src/: cloudmusic.rs  lib.rs  tempfiles.rs
docs/musicdog/src/: main.rs.md
docs/player/src/: core.rs.md  lib.rs.md  music.rs.md
docs/status/src/: lib.rs.md  messege.rs.md
docs/tui/src/: lib.rs.md  ui.rs.md
musicdog/: Cargo.toml
musicdog/src/: main.rs
player/: Cargo.toml
player/src/: core.rs  lib.rs  music.rs
status/: Cargo.toml
status/src/: lib.rs  messege.rs
tui/: Cargo.toml
tui/src/: lib.rs  ui.rs
tui/src/assets/: default.txt  logo.txt
