[workspace]
resolver = "2"
members = [
 #主要构成 bin
 "musicdog",
  #库文件 lib
  "tui",
  "status",
  "player",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]

tokio = { version = "1.35", features = ["full"] }

rodio = "0.17"
symphonia = "0.5"
cpal = "0.15"

ratatui = { version = "0.30.0", features = ["serde"] }
crossterm = "0.27"
tui-input = "0.8" 

clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
