[package]
name = "cloudmusic"
edition.workspace = true
version.workspace = true

[dependencies]
status = { path = "../status"}
player = { path = "../player"}
serde_json = "1.0"
ncmapi = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [ "stream", "json" ] }
futures-util = "0.3"
tempfile = "3.10"
url = "2.5"
