[package]
name = "player"
edition.workspace = true
version.workspace = true

[dependencies]

rodio = "0.17"
walkdir = "2"
anyhow = "1"
lofty = "0.18"
regex = "1.10"
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
